--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.brutusin</groupId>
             <artifactId>json-codec-jackson</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>1.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.brutusin</groupId>
             <artifactId>commons</artifactId>
-            <version>1.3.2-SNAPSHOT</version>
+            <version>1.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
