--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
     <dependencies>
         <dependency>
             <groupId>org.brutusin</groupId>
+            <artifactId>json</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.brutusin</groupId>
             <artifactId>json-codec-jackson</artifactId>
             <version>1.1.1</version>
             <scope>runtime</scope>
@@ -46,11 +51,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>   
-        </dependency>
-        <dependency>
-            <groupId>org.brutusin</groupId>
-            <artifactId>commons</artifactId>
-            <version>1.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
