--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.brutusin</groupId>
             <artifactId>json-codec-jackson</artifactId>
-            <version>1.1.1</version>
+            <version>1.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
