--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         </dependency>
         <dependency>
             <groupId>org.brutusin</groupId>
-            <artifactId>json-codec-jackson</artifactId>
+            <artifactId>json-provider</artifactId>
             <version>1.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
