--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,12 @@
         <dependency>
             <groupId>org.brutusin</groupId>
             <artifactId>json</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.brutusin</groupId>
             <artifactId>json-provider</artifactId>
-            <version>1.1.2-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
